<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_carro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment_carro">

    <TextView
        android:id="@+id/fragment_carro"
        android:layout_width="0dp"
        android:layout_height="663dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvTitleCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carro"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_carro" />

    <EditText
        android:id="@+id/etChassiCarro"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/chassi"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleCarro" />

    <EditText
        android:id="@+id/etNomeCarro"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etChassiCarro" />

    <EditText
        android:id="@+id/etMontadoraCarro"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/montadora"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeCarro" />

    <EditText
        android:id="@+id/etNumeroDeRodasCarro"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/numeroDeRodas"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMontadoraCarro" />

    <EditText
        android:id="@+id/etQtdPortasCarro"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/qtdPortas"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeroDeRodasCarro" />

    <Button
        android:id="@+id/btnAtualizarCarro"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:text="@string/btnAtualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluirCarro" />

    <Button
        android:id="@+id/btnCadastrarCarro"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnCadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQtdPortasCarro" />

    <Button
        android:id="@+id/btnBuscarCarro"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarCarro" />

    <Button
        android:id="@+id/btnExcluirCarro"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:text="@string/btnExcluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQtdPortasCarro" />

    <TextView
        android:id="@+id/tvResultadoCarro"
        android:layout_width="283dp"
        android:layout_height="135dp"
        android:layout_marginTop="140dp"
        android:scrollbars="vertical|horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQtdPortasCarro" />


</androidx.constraintlayout.widget.ConstraintLayout>