<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment_cliente">

    <TextView
        android:id="@+id/fragment_cliente"
        android:layout_width="0dp"
        android:layout_height="657dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTituloCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_cliente" />

    <TextView
        android:id="@+id/tvCpfCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tvCPF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etCpfCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloCliente"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvNomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNome"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etNomeCliente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCpfCliente"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnAtualizarCliente"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="59dp"
        android:text="@string/btnAtualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeCliente" />

    <Button
        android:id="@+id/btnCadastrarCliente"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="18dp"
        android:text="@string/btnCadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeCliente" />

    <Button
        android:id="@+id/btnBuscarCliente"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="9dp"
        android:text="@string/btnBuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarCliente" />

    <Button
        android:id="@+id/btnExcluirCliente"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="59dp"
        android:text="@string/btnExcluir"
        app:layout_constraintEnd_toEndOf="@+id/fragment_cliente"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizarCliente" />

    <EditText
        android:id="@+id/etCpfCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:ems="10"
        android:hint="@string/CPF"
        android:importantForAutofill="no"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_cliente" />

    <EditText
        android:id="@+id/etNomeCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_cliente" />

    <TextView
        android:id="@+id/tvResultadoCliente"
        android:layout_width="323dp"
        android:layout_height="265dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:scrollbars="vertical|horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarCliente" />


</androidx.constraintlayout.widget.ConstraintLayout>