<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_aluguel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment_aluguel">

    <TextView
        android:id="@+id/fragment_aluguel"
        android:layout_width="0dp"
        android:layout_height="655dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitleAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aluguel"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="77dp" />


    <EditText
        android:id="@+id/etNumeroAluguel"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/num"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAluguel" />

    <EditText
        android:id="@+id/etDataInicioAluguel"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/dataInicio"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeroAluguel" />

    <EditText
        android:id="@+id/etDataFinalAluguel"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/dataFinal"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataInicioAluguel" />

    <Button
        android:id="@+id/btnAtualizarAluguel"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:text="@string/btnAtualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCarrosAluguel" />

    <Button
        android:id="@+id/btnCadastrarAluguel"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnCadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spCarrosAluguel" />

    <Button
        android:id="@+id/btnListarAluguel"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="12dp"
        android:text="@string/btnListar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrarAluguel" />

    <Button
        android:id="@+id/btnExcluirAluguel"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="64dp"
        android:text="@string/btnExcluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAtualizarAluguel" />

    <Button
        android:id="@+id/btnBuscarAluguel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etNumeroAluguel"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleAluguel" />

    <TextView
        android:id="@+id/tvResultadoAluguel"
        android:layout_width="289dp"
        android:layout_height="124dp"
        android:layout_marginBottom="40dp"
        android:scrollbars="vertical|horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spClientesAluguel"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataFinalAluguel" />


    <Spinner
        android:id="@+id/spCarrosAluguel"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spClientesAluguel" />


</androidx.constraintlayout.widget.ConstraintLayout>